# cvai

./: .coveragerc  .dockerignore  .env.example  .firebaserc  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  app.py  compose.yaml  docker-compose.yml  firebase.json  firestore.rules  firestore.rules.test.js  package-lock.json  package.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml  docker.yml  test.yml
cvai_core/: cv.py  layouts.py  llm.py  pdf.py  repo.py  schema.py  structure.py  templates.py  yaml_format.py
cvai_web/: __init__.py  __main__.py  asgi.py  llm.py  repo.py  schema.py  server.py  structure.py  view_helpers.py
cvai_web/jinja_templates/: README.md  action.html.j2  (+39 more)
docker/: firebase-emulators.Dockerfile  firestore.local.rules  storage.rules  web.Dockerfile
docs/: ARCHITECTURE.md  CODING_GUIDELINES.md  DOMAIN.md  GUIDE.adoc  LAYOUTS.adoc  SCHEMA.adoc  TEMPLATES.adoc  USE_CASES.md  UX.adoc  architecture.md  project-boundaries.md  use-cases.md
functions/: Dockerfile  go.mod  go.sum
llm/: go.mod
schemas/: cv.schema.json
scripts/: docs.py
tests/: fixtures.py  test_asgi.py  test_cli.py  test_cv.py  test_e2e.py  test_integration.py  test_layouts.py  test_llm.py  test_pdf.py  test_repo.py  test_schema.py  test_server.py  test_structure.py  test_templates.py  test_view_helpers.py
web/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
(+244 files in other folders)
